Button z-index bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@ textarea {
 
 .button {
   position: relative;
-  z-index: 20;
   padding: 12px 15px;
   width: 100%;
   background-color: #f2726f;
@@ -159,6 +158,8 @@ textarea {
 }
 
 .button-div {
+  position: relative;
+  z-index: 3;
   max-width: 210px;
 }
 
